k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
  namespace: devops-app
spec:
  selector:
    app: devops-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP  # Kong Gateway se encargará de exponerlo al mundo
